--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: sun 
-subtitle: ''
+title: sunboy
+subtitle: '2G World'
 description: record my growth
 keywords: technic
 author: sunboyZgz
