don't have a easy method or a useful action to resolve update time error, delete updated time feature

--- a/_config.yml
+++ b/_config.yml
@@ -105,4 +105,5 @@ theme: fluid
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: ""
+  type: git
+  repo: https://github.com/sunboyZgz/sunboyZgz.github.io.git
